--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <div class="game">
     <div class="game__hud">
       <div>Score: <span class="game__score">0</span></div>
-      <a href="">Github</a>
+      <a href="https://github.com/mmapplebeck/snake">Github</a>
     </div>
     <canvas class="game__canvas" width="640" height="480"></canvas>
     <div class="game__dialogue">
